@@ -470,7 +470,7 @@ device refers to it.
 .TQ
 .I @FONTDIR@/\:\%devps/\:\%generate/\:\%dingbats\-reversed.map
 .TQ
-.I @FONTDIR@/\:\%devps/\:\%generate/\:\%lgreekmap
+.I @FONTDIR@/\:\%devps/\:\%generate/\:\%slanted\-symbol.map
 .TQ
 .I @FONTDIR@/\:\%devps/\:\%generate/\:\%symbol.map
 .TQ
